Fix the brand logo display on mobile app

--- a/10-kiwiplanner/src/components/NavBar.css
+++ b/10-kiwiplanner/src/components/NavBar.css
@@ -5,6 +5,7 @@
 }
 .brand-logo {
   margin-left: 2.5em;
+  width: 200px;
 }
 .navbar-fixed {
   z-index: 999;
